# PG2-rt-app

./: CMakeLists.txt  README.md  config.json  vcpkg.json
shaders/: basic.vert  better.frag
src/: App.cpp  App.hpp  Callback.cpp  Callbacks.cpp  Callbacks.hpp  Camera.cpp  Camera.hpp  Collision.cpp  Collision.hpp  Globals.cpp  Globals.hpp  Logger.cpp  Logger.hpp  Map.cpp  Map.hpp  MazeGenerator.cpp  MazeGenerator.hpp  Mesh.hpp  Model.cpp  Model.hpp  OBJloader.cpp  OBJloader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture.cpp  Texture.hpp  Utils.cpp  Utils.hpp  Vertex.hpp  assets.h  gl_err_callback.hpp  gl_error_callback.cpp  main.cpp
